[package]
name = "crowpinion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.9.1"

[dependencies.bevy_common_assets]
version = "0.4"
features = ["ron"]

[dependencies.serde]
version = "1.0"

[dependencies.ron]
version = "0.8"

